# Talkie

./: MEMORY.md  PROGRESS.md  pyproject.toml  realtime_agent.py  test_sensevoice_noise.py  test_vad.py
docs/: LIVEKIT_ARCHITECTURE.md
src/talkie/: config.py  exceptions.py  logging_config.py
src/talkie/livekit_plugins/: __init__.py  base.py  llm.py  stt.py  tts.py  turn_detector.py
src/talkie/perception/: __init__.py  asr.py  vad.py
