[project]
name = "talkie"
version = "0.1.0"
description = "Human-like full-duplex voice interaction core module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "webrtc-noise-gain>=1.2.3",
    "sherpa-onnx>=1.10.0",
    "onnxruntime==1.23.2",
    "uvicorn>=0.40.0",
    "hupper>=1.12.1",
    "torch>=2.0.0",
    "webrtcvad-wheels>=2.0.14",
    "silero-vad>=6.2.0",
    "livekit-agents[openai]~=1.4",
    "livekit-plugins-silero>=0.7.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talkie"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
